<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mega Hertz</string>

    //Main menu page
    <string name="title">Mega Hertz Car Rental App</string>
    <string name="subtitle">Book Your Car Rental Services with Us</string>
    <string name="sign_in"> Account Login</string>
    <string name="browse">Just Browse</string>
    <string name="registerAccount">Submit Account Information</string>

    //Login Screen Page
    <string name="login_welcome">Please enter your username and password to login</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="not_registered">If you are not registered, please do so</string>
    <string name="login">Login</string>

    //detailed car values
    <string name="name">name:</string>
    <string name="mpg">mpg:</string>
    <string name="year">year:</string>
    <string name="make">make:</string>
    <string name="summary">summary:</string>
    <string name="pickup">Pick-up Date</string>
    <string name="dropoff">Drop-off Date</string>
    <string name="totalcost">Total Cost:</string>
    <string name="confirmorder">Reserve</string>
    <string name="insurance">Insurance Cost:</string>
    <string name="costperday">Cost per day:</string>

    //reservation confirmation values
    <string name="FirstName">First Name:</string>
    <string name="LastName">Last Name:</string>
    <string name="CreditNumber">Credit Card Number:</string>
    <string name="SecurityCode">Security Code:</string>
    <string name="BillingAddress">Billing Address:</string>
    <string name="ExpDate">Expiration Date:</string>
    <string name="title_activity_confirm_reservation">ConfirmReservationActivity</string>

    //Categories Prompt
    <string name="action_settings">Settings</string>
    <string name="activity_browse_categories">Browse_Categories</string>
    <string name="activity_account_information">Account_Information</string>
    <string name="search_categories">Search</string>
    <string name="economy">Economy</string>
    <string name="midsized">Midsized</string>
    <string name="sports">Sports</string>
    <string name="minivan">Minivan</string>
    <string name="compact">Compact</string>
    <string name="sportsUtility">Sports Utility</string>
    <string name="standard">Standard</string>
    <string name="fullSized">Full Sized</string>
    <string name="premium">Premium</string>
    <string name="luxury">Luxury</string>
    <string name="convertible">Convertible</string>
    <string name="promptDateTo">Select the date to drop off vehicle:</string>
    <string name="promptDateFrom">Select the date to pick up vehicle:</string>
    <string name="changeDate">Change Date</string>

    //Account Information page
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="DOB">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="register">Register Account</string>
    <string name="title_activity_user_details">user_details</string>

    //User Details Page
    <string name="Return">Continue to Browse</string>
    <string name="congrats">Congratulations You have Signed in!</string>
    <string name="title_activity_login_screen">login_screen</string>
    <string name="title_activity_all_products">All Cars Available</string>
    <string name="title_activity_list_item">list_item</string>
    <string name="title_activity_view_single_car">view_single_car</string>
    <string name="title_activity_some_products">some_products</string>
    <string name="someCheck">Some checkboxes were selected</string>


</resources>
