<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainMenu">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/welcome_text" />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/subtitle"
        android:id="@+id/subtitle_text"
        android:layout_below="@+id/welcome_text"
        android:layout_centerHorizontal="true"   />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/account_login"
        android:layout_below="@+id/subtitle_text"

        android:layout_centerHorizontal="true" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_below="@id/account_login"

        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/browse"
        android:id="@+id/Browse"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true" />




</RelativeLayout>
