<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gabriel.mega_hurtz.login_screen">

    <TextView
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/login_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:id="@+id/textView" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:id="@+id/loginGridLayout"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:columnCount="2"
        android:rowCount="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_username"
            android:id="@+id/loginUsernameLabel"
            android:layout_row="0"
            android:layout_column="0"
            style="@style/TextView" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="8"
            android:id="@+id/loginUsername"
            android:layout_row="0"
            android:layout_column="1"
            android:hint="username"
            style="@style/EditText" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/login_password"
            android:id="@+id/loginPasswordLabel"
            android:layout_row="1"
            android:layout_column="0"
            style="@style/TextView" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="8"
            android:id="@+id/loginPassword"
            android:layout_row="1"
            android:layout_column="1"
            android:hint="********"
            style="@style/EditText" />



        </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/login"
        android:layout_below="@+id/loginGridLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/not_registered"
        android:layout_below="@id/login"
        android:id="@+id/loginNotRegistered"
        android:layout_marginTop="25dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/register"
        android:layout_below="@+id/loginNotRegistered"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
